# dueling-quibblers

./: README.md  app.py  app_v3.py  cdk.json  dueling_quibblers_v2.py  dueling_quibblers_v4.py  pyproject.toml  requirements.txt  utils.py  utils_v2.py
dueling_quibblers/: __init__.py
ecs/: Dockerfile  app.py  app_v2.py  dueling_quibblers_v1.py  dueling_quibblers_v2.py  dueling_quibblers_v3.py  pyproject.toml  requirements.txt  utils.py  utils_v2.py
