[tool.poetry]
name = "dueling-quibblers"
version = "0.1.0"
description = "A fun CLI application that creates debates between fantasy characters using LangGraph and Ollama"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "dueling_quibblers"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
ddgs = "^9.4.3"
grandalf = "^0.8"
langchain = "^0.3.26"
langchain-ollama = "^0.3.6"
langgraph = "^0.5.3"
pydantic = "^2.11.7"
requests = "^2.32.4"
rich = "^14.0.0"
streamlit = "^1.47.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dueling-quibblers = "dueling_quibblers:main"

[packages]
package-mode = false